updated texts on home, soundscape. styling changes on about us and slide. updated services page styling and french text

--- a/_data/locales/en.yml
+++ b/_data/locales/en.yml
@@ -198,7 +198,7 @@ projects:
   academic_output: "For the academic output, consult these publications and links"
   after: "AFTER"
   before: "BEFORE"
-  year: "YEAR"
+  year: "WHEN"
   credits: "Credits"
   discover_project: "DISCOVER THE PROJECT"
   author: "author"
