--- a/_data/locales/en.yml
+++ b/_data/locales/en.yml
@@ -240,7 +240,7 @@ blogs:
 events:
   title: "EVENTS ARCHIVES"
   placeholder: Search
-  description: "This blog has French and English content and may not be available in both languages."
+  description: "This archive has French and English content and may not be available in both languages."
   time: 'TIME'
   location: 'LOCATION'
   language: 'LANGUAGE'
