Made slider clickable to view projects

--- a/_data/locales/fr.yml
+++ b/_data/locales/fr.yml
@@ -27,18 +27,23 @@ index:
     - title: "COVID-19 and c"
       description: "Getting a taste of the quiet we thought we wanted"
       image: "/assets/images/slides/slide1.png"
+      url: "projects/project1"
     - title: "COVID-19 and c"
       description: "Getting a taste of the quiet we thought we wanted"
       image: "/assets/images/slides/slide1.png"
+      url: "projects/project1"
     - title: "COVID-19 and c"
       description: "Getting a taste of the quiet we thought we wanted"
       image: "/assets/images/slides/slide1.png"
+      url: "projects/project1"
     - title: "COVID-19 and c"
       description: "Getting a taste of the quiet we thought we wanted"
       image: "/assets/images/slides/slide1.png"
+      url: "projects/project1"
     - title: "COVID-19 and c"
       description: "Getting a taste of the quiet we thought we wanted"
       image: "/assets/images/slides/slide1.png"
+      url: "projects/project1"
 
 about:
   title: "À propos de nous"
