fixed nav arrows to flow with the text end, added missing text for project hover in fr

--- a/_data/locales/fr.yml
+++ b/_data/locales/fr.yml
@@ -201,6 +201,7 @@ projects:
   before: "AVANT"
   year: "QUAND"
   credits: "Crédits"
+  discover_project: "DÉCOUVREZ LE PROJET"
   author: "auteur"
 
 
