Home pages slider updated but titles and descriptions don’t fit…

--- a/_data/locales/fr.yml
+++ b/_data/locales/fr.yml
@@ -24,26 +24,30 @@ index:
       description: "Ville Sonore se sert de Montréal comme d’un laboratoire vivant pour la recherche sur les ambiances sonors en collaboration avec une diversité de parties prenantes des secteurs public et privé ainsi que du grand public. Dans l’élan des chantiers réglementaires au Québec et au Canada, nous avons mis en place un partenariat intersectoriel pour contribuer à une fabrique de la ville plus équitable, favorable à la santé, et sensible au sonore."
       image: "/assets/images/accordions/home/1.png"
   slides:
-    - title: "COVID-19 and c"
-      description: "Getting a taste of the quiet we thought we wanted"
-      image: "/assets/images/slides/slide1.png"
-      url: "projects/project1"
-    - title: "COVID-19 and c"
-      description: "Getting a taste of the quiet we thought we wanted"
-      image: "/assets/images/slides/slide1.png"
-      url: "projects/project1"
-    - title: "COVID-19 and c"
-      description: "Getting a taste of the quiet we thought we wanted"
-      image: "/assets/images/slides/slide1.png"
-      url: "projects/project1"
-    - title: "COVID-19 and c"
-      description: "Getting a taste of the quiet we thought we wanted"
-      image: "/assets/images/slides/slide1.png"
-      url: "projects/project1"
-    - title: "COVID-19 and c"
-      description: "Getting a taste of the quiet we thought we wanted"
-      image: "/assets/images/slides/slide1.png"
-      url: "projects/project1"
+    - title: "Des balades sonores pour intéresser les professionnel·les et le grand public aux questions sonores"
+      description: "Utiliser les balades sonores immersives pour sensibiliser au sonore et cultiver l'empathie parmi les professionnel·les et le grand public"
+      image: "/assets/images/projects/Soundwalks/DSC_0142.jpg"
+      url: "projects/project20"
+    - title: "Intéresser les professionnel·les en urbanisme et le grand public au sonore"
+      description: "Des stratégies pour mobiliser les connaissances liées au sonore dans la pratique et le discours public"
+      image: "/assets/images/projects/Engaging_professionals/IMG_8504.JPG"
+      url: "projects/project21"
+    - title: "De votre domicile à votre espace vert local ; Ce que vous entendez entre les deux ?"
+      description: "Ambiance sonore des espaces verts accessibles à pied, une approche cartographique participative"
+      image: "/assets/images/projects/GreenSpaceWalkingAccess/GreenSpaceNoiseNeighbourhood.jpeg"
+      url: "projects/project25"
+    - title: "L’art sonore dans les espaces publics : Les Madelinéennes"
+      description: "Son et patrimoine culturel dans l'espace public : évaluation d'une installation sonore avec la communauté locale"
+      image: "/assets/images/projects/les_madelinennes/230711_Parc-Madelinots_006.jpg"
+      url: "projects/project16"
+    - title: "Activités industrielles vs résidentielles : Cohabitation sonore dans Assomption Sud-Longue Pointe"
+      description: "Étudier la cohabitation sonore autour du port de Montréal"
+      image: "/assets/images/projects/industry_v_residence/Port-port.jpeg"
+      url: "projects/project12"
+    - title: "L'art sonore dans les espaces publics : Niches Acoustiques"
+      description: "Informer la conception de l'art sonore dans un espace public parisien grâce à des simulations d’ambiances sonores"
+      image: "/assets/images/projects/Niches_acoustiques/XP1_panorama.jpg"
+      url: "projects/project15"
 
 about:
   title: "À propos de nous"
