--- a/_data/locales/fr.yml
+++ b/_data/locales/fr.yml
@@ -271,16 +271,14 @@ services:
       id: "atelier"
       points:
         - name: "Avec les parties prenantes, par exemple :
-                    Avec les professionnels du design
-                    Avec les professionnels de l'urbanisme
-                    Avec les décideurs politiques
-                    Avec les artistes sonores
-                    Avec le grand public"
-        - name: "En utilisant 
-                    des outils de conception tangibles, par exemple, des fiches de travail
-                    des méthodes immersives/incarnées, par exemple, des simulations VR, des soundwalks"
-        - name: "Exercices d'écoute 
-                    En utilisant des approches innovantes, par exemple, des exercices de développement de l'empathie"
+                    <br>Avec les professionnels du design
+                    <br>Avec les professionnels de l'urbanisme
+                    <br>Avec les décideurs politiques
+                    <br>Avec les artistes sonores
+                    <br>Avec le grand public"
+        - name: "En utilisant des outils de conception tangibles, par exemple, des fiches de travail"
+        - name: "En utilisant des méthodes immersives/incarnées, par exemple, des simulations VR, des soundwalks, exercices d'écoute"
+        - name: "En utilisant des approches innovantes, par exemple, des exercices de développement de l'empathie"
     - name: "Mobilisation des connaissances"
       id: "connaissance"
       points:
@@ -380,15 +378,11 @@ contact:
   contact:
     title: "Base de données sur la réglementation du bruit"
     links:
-      - name: "Pour contribuer à la base de données sur la réglementation du bruit, veuillez envoyer votre documentation à"
-      - name: "catherine.guastavino@mcgill.ca"
-        url: "#"
+      - name: 'Pour contribuer à la base de données sur la réglementation du bruit, veuillez envoyer votre documentation à<br><a href="mailto:catherine.guastavino@mcgill.ca">catherine.guastavino@mcgill.ca</a>'
   address:
     title: "ADRESSE POSTALE"
     location:
-      - name: "École d'études en information Université McGill"
-      - name: "3661 rue Peel,"
-      - name: "Montréal, QC (Canada) H3A 1X1"
+      - name: "École d'études en information Université McGill<br>3661 rue Peel,<br>Montréal, QC (Canada) H3A 1X1"
 
 footer: 
   location:
