updated the images in homepage accordion and updaed the eye.svg

--- a/_data/locales/en.yml
+++ b/_data/locales/en.yml
@@ -22,12 +22,12 @@ index:
     - title: SOUNDSCAPE
       id: "home-accordion-2"
       description: "<a href=\"./soundscape\">Soundscape</a> is a new user-centered proactive approach reframing sound as a resource, in relation to other urban design considerations, from early conception to long-term use. It does away with the implicit assumption that all environmental sounds are unwanted. While soundscape has become well established in research, implementation in practice remains scarce. Ultimately, every city user deserves to live, work, play and relax in sound environments they find appropriate. Realizing this goal involves accounting for “city users” perspectives, their activities, and the contexts in which sounds are experienced, all of which has implications for how “city makers” plan and design urban spaces. In the long run, we can improve the quality of life of residents and visitors who will benefit from a better-managed city, where sound has been considered as part of their experience."
-      image: "/assets/images/accordions/home/1.png"
+      image: "/assets/images/accordions/home/P6_Figure 2. Mont Royal pedestrianization.jpg"
 
     - title: MONTREAL AS LIVING LAB
       id: "home-accordion-3"
       description: "Sounds in the City uses Montreal as a living laboratory for soundscape research in collaboration with a wide range of stakeholders from the private and public sectors, as well as the general public. Building on momentum to revisit noise policies in Canada and Quebec, we have assembled a cross-sectorial partnership to inform more equitable, sound-aware and healthier city-making."
-      image: "/assets/images/accordions/home/1.png"
+      image: "/assets/images/accordions/home/Sitc_FdM_Fraisse.jpg"
 
 about:
   title: "About Us"
