--- a/_data/locales/en.yml
+++ b/_data/locales/en.yml
@@ -22,7 +22,7 @@ index:
     - title: SOUNDSCAPE
       id: "home-accordion-2"
       description: "<a href=\"./soundscape\">Soundscape</a> is a new user-centered proactive approach reframing sound as a resource, in relation to other urban design considerations, from early conception to long-term use. It does away with the implicit assumption that all environmental sounds are unwanted. While soundscape has become well established in research, implementation in practice remains scarce. Ultimately, every city user deserves to live, work, play and relax in sound environments they find appropriate. Realizing this goal involves accounting for “city users” perspectives, their activities, and the contexts in which sounds are experienced, all of which has implications for how “city makers” plan and design urban spaces. In the long run, we can improve the quality of life of residents and visitors who will benefit from a better-managed city, where sound has been considered as part of their experience."
-      image: "/assets/images/accordions/home/P6_Figure 2. Mont Royal pedestrianization.jpg"
+      image: "/assets/images/accordions/home/P6_Figure_2._Mont_Royal_pedestrianization.jpg"
 
     - title: MONTREAL AS LIVING LAB
       id: "home-accordion-3"
