--- a/_data/locales/en.yml
+++ b/_data/locales/en.yml
@@ -3,10 +3,10 @@ index:
   sound: SOUND BETTER
   discover: DISCOVER WHO WE ARE
   notbad: "(not just less bad)"
-  description: "Sound plays a critical and complex role in the way we experience urban spaces. 
-  Today, most cities treat urban sound as “noise”, an isolated nuisance that should be mitigated when problems arise. 
-  But sound is more than just noise! Sound can also support our well-being, orientation in time and space, focus, 
-  and our lasting memories of urban spaces - even the city as a whole. 
+  description: "Sound plays a critical and complex role in the way we experience urban spaces.
+  Today, most cities treat urban sound as “noise”, an isolated nuisance that should be mitigated when problems arise.
+  But sound is more than just noise! Sound can also support our well-being, orientation in time and space, focus,
+  and our lasting memories of urban spaces - even the city as a whole.
   Think about the sounds of your daily life, such as music, conversation, bird chirping, or bells."
   discover: "DISCOVER WHO WE ARE"
   who: "WHO WE ARE"
@@ -22,12 +22,12 @@ index:
     - title: SOUNDSCAPE
       id: "home-accordion-2"
       description: "<a href=\"./soundscape\">Soundscape</a> is a new user-centered proactive approach reframing sound as a resource, in relation to other urban design considerations, from early conception to long-term use. It does away with the implicit assumption that all environmental sounds are unwanted. While soundscape has become well established in research, implementation in practice remains scarce. Ultimately, every city user deserves to live, work, play and relax in sound environments they find appropriate. Realizing this goal involves accounting for “city users” perspectives, their activities, and the contexts in which sounds are experienced, all of which has implications for how “city makers” plan and design urban spaces. In the long run, we can improve the quality of life of residents and visitors who will benefit from a better-managed city, where sound has been considered as part of their experience."
-      image: "/assets/images/accordions/home/P6_Figure_2._Mont_Royal_pedestrianization.jpg"
+      image: "/assets/images/accordions/home/2.png"
 
     - title: MONTREAL AS LIVING LAB
       id: "home-accordion-3"
       description: "Sounds in the City uses Montreal as a living laboratory for soundscape research in collaboration with a wide range of stakeholders from the private and public sectors, as well as the general public. Building on momentum to revisit noise policies in Canada and Quebec, we have assembled a cross-sectorial partnership to inform more equitable, sound-aware and healthier city-making."
-      image: "/assets/images/accordions/home/Sitc_FdM_Fraisse.jpg"
+      image: "/assets/images/accordions/home/3.png"
 
 about:
   title: "About Us"
@@ -279,27 +279,27 @@ services:
     - info: "Articulate your sound-related needs and expectations, and integrating them into a broader plan for your products, services and spaces"
       image: "/assets/images/icons/files-contained.svg"
       alt: "service-1"
-      
+
     - info: "Identify and strategize sound-related transformations"
       image: "/assets/images/icons/eye-contained.svg"
       alt: "service-2"
-      
+
     - info: "Facilitate communication between engineering and design professionals to articulate solutions and interventions"
       image: "/assets/images/icons/chat-contained.svg"
       alt: "service-3"
-      
+
     - info: "Identify and preserve “high quality” sound environments"
       image: "/assets/images/icons/star-contained.svg"
       alt: "service-4"
-      
+
     - info: "Enhance the quality of experience through sound"
       image: "/assets/images/icons/sound-contained.svg"
       alt: "service-5"
-      
+
     - info: "Reinforce the sonic identity of heritage places"
       image: "/assets/images/icons/building-contained.svg"
       alt: "service-6"
-  difference: "DIFFERENT  PERSPECTIVES ON"
+  difference: "DIFFERENT PERSPECTIVES ON"
   sound: "SOUND"
   info: "Our projects rely on participatory approaches to the design of built environment and products, integrating different perspectives on sound from a wide range of stakeholders.  "
   accordions:
@@ -385,9 +385,9 @@ contact:
   address:
     title: "MAILING ADDRESS"
     location:
-      - name: "School of Information Studies McGill University<br>3661 Peel Street,<br>Montreal, QC (Canada) H3A 1X1"
+      - name: "School of Information Studies<br> McGill University, 3661 Peel Street,<br>Montreal, QC (Canada)<br> H3A 1X1"
 
-footer: 
+footer:
   location:
     - name: "School of Information Studies"
     - name: "McGill University, 3661 Peel Street,"
